config/k8s_deploy/yml_files/qa/osa-suite/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: osa-suite
spec:
  rules:
  - host: irisqa.rsicorp.local
    http:
      paths:
      - backend:
          serviceName: osaalertservice
          servicePort: 80
        path: /osa/alerts
      - backend:
          serviceName: osacoreservice
          servicePort: 80
        path: /osa/osacore
      - backend:
          serviceName: powerbiembeddedservice
          servicePort: 80
        path: /pbi
      - backend:
          serviceName: afmservice
          servicePort: 80
        path: /osa/afm/
      - backend:
          serviceName: alertgeneration
          servicePort: 80
        path: /osa/ag/
      - backend:
          serviceName: osabundle
          servicePort: 80
        path: /osa_bundle/
      - backend:
          serviceName: osaclient
          servicePort: 80
        path: /
      - backend:
          serviceName: provisionservice
          servicePort: 80
        path: /provision/
      - backend:
          serviceName: deploy
          servicePort: 80
        path: /deploy/
      - backend:
          serviceName: osaadmin
          servicePort: 80
        path: /admin
      - backend:
          serviceName: scorecard
          servicePort: 80
        path: /osa/scorecard/
  - host: qaz1k8mas001.rsicorp.local
    http:
      paths:
      - backend:
          serviceName: osaalertservice
          servicePort: 80
        path: /osa/alerts
      - backend:
          serviceName: osacoreservice
          servicePort: 80
        path: /osa/osacore
      - backend:
          serviceName: powerbiembeddedservice
          servicePort: 80
        path: /pbi
      - backend:
          serviceName: afmservice
          servicePort: 80
        path: /osa/afm/
      - backend:
          serviceName: alertgeneration
          servicePort: 80
        path: /osa/ag/
      - backend:
          serviceName: osabundle
          servicePort: 80
        path: /osa_bundle/
      - backend:
          serviceName: osaclient
          servicePort: 80
        path: /iris
      - backend:
          serviceName: provisionservice
          servicePort: 80
        path: /provision/
      - backend:
          serviceName: deploy
          servicePort: 80
        path: /deploy/
      - backend:
          serviceName: osaadmin
          servicePort: 80
        path: /admin
      - backend:
          serviceName: scorecard
          servicePort: 80
        path: /osa/scorecard/
